tests/baselines/reference/MemberFunctionDeclaration5.errors.txt
tests/cases/conformance/es6/fmmberFunctionDeclarations/MemberFunctionDeclaration5.ts(3,1): error TS1003: Identifier expected.


==== tests/cases/conformance/es6/fmmberFunctionDeclarations/MemberFunctionDeclaration5.ts (1 errors) ====
    class C {
       *
    }
    ~
!!! error TS1003: Identifier expected.